core/roboconf-core/src/test/resources/configurations/valid/instance-imbricated-2.instances
# Imbricated instances

instance of vm {
	name: vm1;	# the VM name
	
	instance of server {
		name: server;
		port: 9878;
	}
}

instance of vm {
	name: vm2;	# the VM name
	
	instance of server {
		name: server;
		port: 9878;
	}
}
