core/roboconf-core/src/test/resources/configurations/invalid/instanceof-invalid-end.instances
instance of server {
	name: server1;
} instance of toto {

}